@startuml

title __SRC's Class Diagram__\n


    class ChatMediador {
        - grupos : Map<String, Grupo>
        - usuarios : Map<String, Usuario>
        + ChatMediador()
        + anadirUsuario()
        + anadirUsuarioAGrupo()
        + crearGrupo()
        + enviarMensajeGrupo()
        + enviarMensajeIndividual()
        + grupoExiste()
        + obtenerGrupo()
        + obtenerTodosLosGrupos()
        + obtenerTodosLosUsuarios()
        + obtenerUsuario()
    }

  


    class Grupo {
        - miembros : List<Usuario>
        - nombre : String
        + Grupo()
        + añadirMiembro()
        + getMiembros()
        + getNombre()
    }


    class Main {
        {static} + main()
        {static} - ejecutarOpcion()
        {static} - enviarMensajes()
        {static} - inicializarGrupos()
        {static} - inicializarUsuarios()
        {static} - limpiarPantalla()
        {static} - mostrarGruposDisponibles()
        {static} - mostrarUsuariosDisponibles()
        {static} - obtenerUsuario()
    }

  

    interface Mediador {
        {abstract} + anadirUsuario()
        {abstract} + anadirUsuarioAGrupo()
        {abstract} + crearGrupo()
        {abstract} + enviarMensajeGrupo()
        {abstract} + enviarMensajeIndividual()
        {abstract} + grupoExiste()
        {abstract} + obtenerGrupo()
        {abstract} + obtenerTodosLosGrupos()
        {abstract} + obtenerTodosLosUsuarios()
        {abstract} + obtenerUsuario()
    }

  


    abstract class Usuario {
        # nombre : String
        + Usuario()
        {abstract} + enviarMensajeGrupo()
        {abstract} + enviarMensajeIndividual()
        + getNombre()
        {abstract} + recibirMensaje()
    }

  


    class UsuarioConcreto {
        {static} - RESPUESTAS : List<String>
        - colorANSI : String
        + UsuarioConcreto()
        + enviarMensajeGrupo()
        + enviarMensajeIndividual()
        + recibirMensaje()
        {static} - generarColorANSIAleatorio()
        - responderAutomaticamente()
    }

  

  ChatMediador .up.|> Mediador
  Usuario o-- Mediador : mediador
  UsuarioConcreto -up-|> Usuario


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
